# TIMP

./: 1 default.docx  CLIENT.md  Database.db  Makefile  README.md  Tests xls.xlsx  authregform.ui  database.cpp  dijkstra.cpp  echoServer  echoServer.pro  examples_of_inputs(tasks).md  functionsforserver.cpp  mainwindow.ui  rsa.cpp  rsa.h
.github/workflows/: test.yml
tests/test_algorythm1/test_dijkstra/: .gitignore  Header.h  dijkstra.cpp  dijkstra_test.pro  test_dijkstra.cpp  test_dijkstra.sln  test_dijkstra.vcxproj  test_dijkstra.vcxproj.filters
tests/test_algorythm2/test_dichotomy/: .gitignore  dichotomy.pro  test_dichotomy.cpp  test_dichotomy.sln  test_dichotomy.vcxproj  test_dichotomy.vcxproj.filters
tests/test_encryption/test_rsa/: .gitignore  CMakeLists.txt  README.md  rsa-cpp.pro  rsa.cpp  rsa.h  test_rsa.cpp  test_rsa.sln  test_rsa.vcxproj  test_rsa.vcxproj.filters
tests/test_encryption/test_rsa/test_rsa/x64/Debug/: vc143.idb
tests/test_encryption/test_rsa/test_rsa/x64/Debug/test_rsa.tlog/: test_rsa.lastbuildstate
tests/тест1/: .gitignore  UT-2-SHA512.pro  main.cpp  sha512tests.cpp  sha512tests.h
